# tty-tetris

./: .clang-format  .gitignore  CMakeLists.txt  board.c  board.h  field.c  field.h  figure.c  figure.h  main.c  score.c  score.h  tetris.c  tetris.h
nano/: console.c  console.h  io.c  io.h  io_con.c  io_con.h  io_key.c  io_key.h
